fix table overflow issue in feed settings

--- a/assets/css/feed_settings.css
+++ b/assets/css/feed_settings.css
@@ -1,3 +1,9 @@
 .gaddon-setting.nb_tags {
     height: 70px;
 }
+
+.form-table.gforms_form_settings,
+.settings-field-map-table {
+    width: 100%;
+    table-layout: fixed;
+}
